third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16667.disassembled.exp
processed 2 tasks
task 0 lines 3-7:  publish [// Bytecode version v8]
task 1 lines 11-28:  publish [// Bytecode version v8]
Error: error: expected `)`, found `drop`
   ┌─ test:19:34
   │
19 │     call_closure <|(|M0::S1| has drop)|>
   │                                  ^^^^


